diesel_compile_tests/tests/fail/derive/aliases.stderr
error[E0271]: type mismatch resolving `<posts::columns::id as Column>::Table == users::table`
  --> tests/fail/derive/aliases.rs:36:16
   |
36 |     user_alias.field(posts::id);
   |                ^^^^^ expected struct `posts::table`, found struct `users::table`

error[E0277]: the trait bound `(diesel::query_source::Once, diesel::query_source::Once): Pick<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>>` is not satisfied
  --> tests/fail/derive/aliases.rs:42:10
   |
42 |         .inner_join(post_alias)
   |          ^^^^^^^^^^ the trait `Pick<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>>` is not implemented for `(diesel::query_source::Once, diesel::query_source::Once)`
   |
   = help: the following implementations were found:
             <(MoreThanOnce, OtherCount) as Pick<Left, Right>>
             <(diesel::query_source::Never, MoreThanOnce) as Pick<Left, Right>>
             <(diesel::query_source::Never, diesel::query_source::Never) as Pick<Left, Right>>
             <(diesel::query_source::Never, diesel::query_source::Once) as Pick<Left, Right>>
           and 2 others
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `AliasedField<posts2, posts::columns::id>`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `QuerySource` for `diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>` for `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>`

error[E0271]: type mismatch resolving `<diesel::query_source::Once as Plus<diesel::query_source::Once>>::Output == diesel::query_source::Once`
  --> tests/fail/derive/aliases.rs:42:10
   |
42 |         .inner_join(post_alias)
   |          ^^^^^^^^^^ expected struct `MoreThanOnce`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `AliasedField<posts2, posts::columns::id>`
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `AliasedField<posts2, posts::columns::id>`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `QuerySource` for `diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>` for `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>`

error[E0271]: type mismatch resolving `<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner> as AppearsInFromClause<Alias<posts2>>>::Count == diesel::query_source::Once`
  --> tests/fail/derive/aliases.rs:42:10
   |
42 |         .inner_join(post_alias)
   |          ^^^^^^^^^^ expected struct `MoreThanOnce`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `AliasedField<posts2, posts::columns::id>`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `QuerySource` for `diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>` for `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>`

error[E0271]: type mismatch resolving `<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>> as AppearsInFromClause<Alias<posts2>>>::Count == diesel::query_source::Once`
  --> tests/fail/derive/aliases.rs:42:10
   |
42 |         .inner_join(post_alias)
   |          ^^^^^^^^^^ expected struct `MoreThanOnce`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>` for `AliasedField<posts2, posts::columns::id>`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `SelectableExpression<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>` for `((users::columns::id, users::columns::name), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>), (AliasedField<posts2, posts::columns::id>, AliasedField<posts2, posts::columns::author>, AliasedField<posts2, posts::columns::title>))`
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<Alias<posts2>, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>` for `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>`

error[E0599]: the method `select` exists for struct `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>`, but its trait bounds were not satisfied
  --> tests/fail/derive/aliases.rs:43:10
   |
43 |         .select(users::id)
   |          ^^^^^^ private field, not a method
   |
   = note: the following trait bounds were not satisfied:
           `&SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: Table`
           which is required by `&SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: diesel::QueryDsl`
           `&mut SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: Table`
           which is required by `&mut SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<JoinOn<diesel::internal::table_macro::Join<users::table, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>, Alias<posts2>, Inner>, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<NullableExpression<AliasedField<posts2, posts::columns::author>>, NullableExpression<users::columns::id>>>>>>: diesel::QueryDsl`

error[E0277]: the trait bound `users::columns::id: SelectableExpression<Alias<users2>>` is not satisfied
  --> tests/fail/derive/aliases.rs:48:23
   |
48 |     user_alias.select(users::id).load::<i32>(conn).unwrap();
   |                       ^^^^^^^^^ the trait `SelectableExpression<Alias<users2>>` is not implemented for `users::columns::id`
   |
   = help: the following implementations were found:
             <users::columns::id as SelectableExpression<JoinOn<Join, On>>>
             <users::columns::id as SelectableExpression<Only<users::table>>>
             <users::columns::id as SelectableExpression<SelectStatement<FromClause<From>>>>
             <users::columns::id as SelectableExpression<diesel::internal::table_macro::Join<Left, Right, Inner>>>
           and 2 others
   = note: required because of the requirements on the impl of `SelectDsl<users::columns::id>` for `SelectStatement<FromClause<Alias<users2>>>`

error[E0277]: the trait bound `users::columns::id: SelectableExpression<Alias<users2>>` is not satisfied
  --> tests/fail/derive/aliases.rs:48:34
   |
48 |     user_alias.select(users::id).load::<i32>(conn).unwrap();
   |                                  ^^^^ the trait `SelectableExpression<Alias<users2>>` is not implemented for `users::columns::id`
   |
   = help: the following implementations were found:
             <users::columns::id as SelectableExpression<JoinOn<Join, On>>>
             <users::columns::id as SelectableExpression<Only<users::table>>>
             <users::columns::id as SelectableExpression<SelectStatement<FromClause<From>>>>
             <users::columns::id as SelectableExpression<diesel::internal::table_macro::Join<Left, Right, Inner>>>
           and 2 others
   = note: required because of the requirements on the impl of `diesel::query_builder::select_clause::SelectClauseExpression<FromClause<Alias<users2>>>` for `diesel::query_builder::select_clause::SelectClause<users::columns::id>`
   = note: required because of the requirements on the impl of `Query` for `SelectStatement<FromClause<Alias<users2>>, diesel::query_builder::select_clause::SelectClause<users::columns::id>>`
   = note: required because of the requirements on the impl of `LoadQuery<'_, _, i32>` for `SelectStatement<FromClause<Alias<users2>>, diesel::query_builder::select_clause::SelectClause<users::columns::id>>`

error[E0277]: the trait bound `Alias<users2>: AppearsInFromClause<pets::table>` is not satisfied
  --> tests/fail/derive/aliases.rs:54:21
   |
54 |         .inner_join(user_alias)
   |                     ^^^^^^^^^^ the trait `AppearsInFromClause<pets::table>` is not implemented for `Alias<users2>`
   |
   = help: the following implementations were found:
             <Alias<S> as AppearsInFromClause<QS>>
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>>` for `pets::columns::id`
   = note: 2 redundant requirements hidden
   = note: required because of the requirements on the impl of `SelectableExpression<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>>` for `((pets::columns::id,), (AliasedField<users2, users::columns::id>, AliasedField<users2, users::columns::name>))`
   = note: required because of the requirements on the impl of `QuerySource` for `diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QuerySource` for `JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>`
   = note: required because of the requirements on the impl of `InternalJoinDsl<Alias<users2>, Inner, _>` for `SelectStatement<FromClause<pets::table>>`

error[E0277]: the trait bound `users::table: JoinTo<pets::table>` is not satisfied
  --> tests/fail/derive/aliases.rs:54:10
   |
54 |         .inner_join(user_alias)
   |          ^^^^^^^^^^ the trait `JoinTo<pets::table>` is not implemented for `users::table`
   |
   = help: the following implementations were found:
             <users::table as JoinTo<Alias<S>>>
             <users::table as JoinTo<BoxedSelectStatement<'a, FromClause<QS>, ST, DB>>>
             <users::table as JoinTo<JoinOn<Join, On>>>
             <users::table as JoinTo<SelectStatement<FromClause<F>, S, D, W, O, L, Of, G>>>
           and 2 others
   = note: required because of the requirements on the impl of `JoinTo<pets::table>` for `Alias<users2>`
   = note: required because of the requirements on the impl of `JoinWithImplicitOnClause<Alias<users2>, Inner>` for `pets::table`

error[E0599]: the method `select` exists for struct `SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>>>`, but its trait bounds were not satisfied
  --> tests/fail/derive/aliases.rs:55:10
   |
55 |         .select(pets::id)
   |          ^^^^^^ private field, not a method
   |
   = note: the following trait bounds were not satisfied:
           `&SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>>>: Table`
           which is required by `&SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>>>: diesel::QueryDsl`
           `&mut SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>>>: Table`
           which is required by `&mut SelectStatement<FromClause<JoinOn<diesel::internal::table_macro::Join<pets::table, Alias<users2>, Inner>, _>>>: diesel::QueryDsl`
